--- a/schedule-ui.xml.tt
+++ b/schedule-ui.xml.tt
@@ -1,3 +1,4 @@
+[%- PROCESS globals.tt -%]
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE mythuitheme SYSTEM "http://www.mythtv.org/schema/mythuitheme.dtd">
 <mythuitheme>
@@ -1675,43 +1676,43 @@
         </textarea>
 
         <buttonlist name="rules" from="baseverywideselector">
-            <position>195,210</position>
+            <position>195,[%-top-%]</position>
             <wrapstyle>selection</wrapstyle>
             <helptext>Select the recording rule</helptext>
         </buttonlist>
 
         <button name="schedoptions" from="baseverywidebutton">
-            <position>215,255</position>
+            <position>[%-x-%],[%-y = top +ystep; y-%]</position>
             <value>Schedule Options</value>
             <helptext></helptext>
         </button>
 
         <button name="storeoptions" from="baseverywidebutton">
-            <position>215,255</position>
+            <position>[%-x-%],[%-y = top +ystep; y-%]</position>
             <value>Storage Options</value>
             <helptext></helptext>
         </button>
 
         <button name="postprocessing" from="baseverywidebutton">
-            <position>215,255</position>
+            <position>[%-x-%],[%-y = top +ystep; y-%]</position>
             <value>Post Processing</value>
             <helptext></helptext>
         </button>
 
         <button name="schedinfo" from="baseverywidebutton">
-            <position>215,255</position>
+            <position>[%-x-%],[%-y = top +ystep; y-%]</position>
             <value>Schedule Info</value>
             <helptext></helptext>
         </button>
 
         <button name="preview" from="baseverywidebutton">
-            <position>215,255</position>
+            <position>[%-x-%],[%-y = top +ystep; y-%]</position>
             <value>Preview</value>
             <helptext></helptext>
         </button>
 
         <button name="metadata" from="baseverywidebutton">
-            <position>215,255</position>
+            <position>[%-x-%],[%-y = top +ystep; y-%]</position>
             <value>Metadata Options</value>
             <helptext></helptext>
         </button>
@@ -1754,7 +1755,7 @@
         </textarea>
 
         <spinbox name="priority" from="basewidespinbox">
-            <position>215,210</position>
+            <position>[%-x-%],210</position>
             <template type="negative">Reduce priority by %n</template>
             <template type="zero">Normal recording priority</template>
             <template type="positive">Raise priority by %n</template>
@@ -1762,12 +1763,12 @@
         </spinbox>
 
         <buttonlist name="input" from="basewideselector">
-            <position>215,255</position>
+            <position>[%-x-%],255</position>
             <helptext></helptext>
         </buttonlist>
 
         <spinbox name="startoffset" from="basewidespinbox">
-            <position>215,300</position>
+            <position>[%-x-%],300</position>
             <template type="negative">Start recording %n minute(s) late</template>
             <template type="zero">Start recording on time</template>
             <template type="positive">Start recording %n minute(s) early</template>
@@ -1775,7 +1776,7 @@
         </spinbox>
 
         <spinbox name="endoffset" from="basewidespinbox">
-            <position>215,345</position>
+            <position>[%-x-%],345</position>
             <template type="negative">End recording %n minute(s) early</template>
             <template type="zero">End recording on time</template>
             <template type="positive">End recording %n minute(s) late</template>
@@ -1783,12 +1784,12 @@
         </spinbox>
 
         <buttonlist name="dupmethod" from="basewideselector">
-            <position>215,390</position>
+            <position>[%-x-%],390</position>
             <helptext></helptext>
         </buttonlist>
 
         <buttonlist name="dupscope" from="baseverywideselector">
-            <position>215,435</position>
+            <position>[%-x-%],435</position>
             <helptext></helptext>
         </buttonlist>
 
@@ -1918,39 +1919,39 @@
         </textarea>
 
         <buttonlist name="recprofile" from="basewideselector">
-            <position>215,210</position>
+            <position>[%-x-%],210</position>
             <helptext></helptext>
         </buttonlist>
 
         <buttonlist name="recgroup" from="basewideselector">
-            <position>215,255</position>
+            <position>[%-x-%],255</position>
             <helptext></helptext>
         </buttonlist>
 
         <buttonlist name="storagegroup" from="basewideselector">
-            <position>215,300</position>
+            <position>[%-x-%],300</position>
             <helptext></helptext>
         </buttonlist>
 
         <buttonlist name="playgroup" from="basewideselector">
-            <position>215,345</position>
+            <position>[%-x-%],345</position>
             <helptext></helptext>
         </buttonlist>
 
         <spinbox name="maxepisodes" from="basewidespinbox">
-            <position>215,390</position>
+            <position>[%-x-%],390</position>
             <template type="zero">No episode limit</template>
             <template type="positive">Keep at most %n episode(s)</template>
             <helptext></helptext>
         </spinbox>
 
         <buttonlist name="maxnewest" from="basewideselector">
-            <position>215,435</position>
+            <position>[%-x-%],435</position>
             <helptext></helptext>
         </buttonlist>
 
         <checkbox name="autoexpire" from="basecheckbox">
-            <position>215,480</position>
+            <position>[%-x-%],480</position>
         </checkbox>
 
         <textarea name="autoexpirelabel" from="basetextarea">
@@ -1991,7 +1992,7 @@
         </textarea>
 
         <checkbox name="autocommflag" from="basecheckbox">
-            <position>215,210</position>
+            <position>[%-x-%],210</position>
         </checkbox>
 
         <textarea name="autocommflaglabel" from="basetextarea">
@@ -2000,7 +2001,7 @@
         </textarea>
 
         <checkbox name="autotranscode" from="basecheckbox">
-            <position>215,255</position>
+            <position>[%-x-%],255</position>
         </checkbox>
 
         <textarea name="autotranscodelabel" from="basetextarea">
@@ -2009,12 +2010,12 @@
         </textarea>
 
         <buttonlist name="transcodeprofile" from="basewideselector">
-            <position>215,300</position>
+            <position>[%-x-%],300</position>
             <helptext></helptext>
         </buttonlist>
 
         <checkbox name="userjob1" from="basecheckbox">
-            <position>215,345</position>
+            <position>[%-x-%],345</position>
         </checkbox>
 
         <textarea name="userjob1label" from="basetextarea">
@@ -2023,7 +2024,7 @@
         </textarea>
 
         <checkbox name="userjob2" from="basecheckbox">
-            <position>215,390</position>
+            <position>[%-x-%],390</position>
         </checkbox>
 
         <textarea name="userjob2label" from="basetextarea">
@@ -2032,7 +2033,7 @@
         </textarea>
 
         <checkbox name="userjob3" from="basecheckbox">
-            <position>215,435</position>
+            <position>[%-x-%],435</position>
         </checkbox>
 
         <textarea name="userjob3label" from="basetextarea">
@@ -2041,7 +2042,7 @@
         </textarea>
 
         <checkbox name="userjob4" from="basecheckbox">
-            <position>215,480</position>
+            <position>[%-x-%],480</position>
         </checkbox>
 
         <textarea name="userjob4label" from="basetextarea">
