--- a/templates/base.tt
+++ b/templates/base.tt
@@ -603,7 +603,7 @@
     <!-- Base definition of a list in very wide 'selector'
          configuration 90/120 wider than basewideselector-->
     <buttonlist name="baseverywideselector" from="baseselector">
-        <area>0,0,515,40</area>
+        <area>0,0,[%-bvwsw-%],[%-bvwsh-%]</area>
         <buttonarea>0,0,495,100%</buttonarea>
         <statetype name="buttonitem">
             <state name="active">
