added comment to generated files

--- a/templates/schedule-ui.tt
+++ b/templates/schedule-ui.tt
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE mythuitheme SYSTEM "http://www.mythtv.org/schema/mythuitheme.dtd">
+[% topcomment %]
 <mythuitheme>
     <window name="programguide">
 
