--- a/templates/base.tt
+++ b/templates/base.tt
@@ -3,7 +3,7 @@
 <mythuitheme>
 
     <!-- Base Font Definitions -->
-    <fontdef name="basesmall" face="Arial">
+    <fontdef name="basesmall" face="[%-face-%]">
         <pixelsize>22</pixelsize>
         <color>#EEEEEE</color>
         <weight>bold</weight>
@@ -1067,28 +1067,28 @@
           <filename>ui/background.png</filename>
         </imagetype>
 
-        <fontdef name="small" face="Thorndale">
+        <fontdef name="small" face="[%-face-%]">
           <color>#FFFFFF</color>
           <pixelsize>19</pixelsize>
-          <weight>bold</weight>
+          <weight>[%-weight-%]</weight>
         </fontdef>
 
-        <fontdef name="medium" face="Thorndale">
+        <fontdef name="medium" face="[%-face-%]">
           <color>#FFFFFF</color>
           <pixelsize>22</pixelsize>
-          <weight>bold</weight>
+          <weight>[%-weight-%]</weight>
         </fontdef>
 
-        <fontdef name="large" face="Thorndale">
+        <fontdef name="large" face="[%-face-%]">
           <color>#FFFFFF</color>
           <pixelsize>28</pixelsize>
-          <weight>bold</weight>
+          <weight>[%-weight-%]</weight>
         </fontdef>
 
-        <fontdef name="clock" face="Thorndale">
+        <fontdef name="clock" face="[%-face-%]">
              <color>#FFFFFF</color>
              <pixelsize>25</pixelsize>
-             <weight>bold</weight>
+             <weight>[%-weight-%]</weight>
         </fontdef>
     </window>
 
