changed mythtv logo to be more similar to the official mythtv logo

--- a/lib/globals.tt
+++ b/lib/globals.tt
@@ -8,20 +8,21 @@
     xres = 800
     yres = 600
 
-    #font definitions
-    #face = Thorndale
-    face = "CartoGothic Std"
-    #face = "CartoGothic"
-    #face = "Baskerville"
+    face = "CartoGothic Std Book"
     fw_regular = "Book"
     fw_italic = "Italic"
     fw_bold = "Bold"
     fw_regular = "Bold Italic"
 
-    menu_font = "CartoGothic Std"
+    menu_font = "CartoGothic Std Book"
     menu_font_weight = "Book"
     menu_font_size = "18"    
     
+    osd_font_face = "CartoGothic Std Book"
+    osd_font_weight = "Book"
+    osd_font_pixelsize = "24"
+
+
     margin_left = 20
     margin_right = margin_left # make margins equal
     margin_top = 20
