work around font naming issue between OS X and Linux using Makefile

--- a/lib/globals.tt
+++ b/lib/globals.tt
@@ -9,7 +9,7 @@
     yres = 600
 
     #global_font = "CartoGothic Std Book"
-    global_font = "CartoGothic Std"
+    #global_font = "CartoGothic Std"
 
     face = global_font
     fw_regular = "Book"
