--- a/templates/schedule-ui.tt
+++ b/templates/schedule-ui.tt
@@ -1695,54 +1695,54 @@
         </textarea>
 
         <buttonlist name="rules" from="baseverywideselector">
-            <position>[%-x-%],[%-top-%]</position>
+            <position>[%-(xres - bvwsw) div 2 -%],[%-top-%]</position>
             <wrapstyle>selection</wrapstyle>
             <helptext>Select the recording rule</helptext>
         </buttonlist>
 
         <button name="schedoptions" from="baseverywidebutton">
-            <position>[%-x-%],[%-y = top + ystep; y-%]</position>
+            <position>[%-(xres - bvwbw) div 2 -%],[%-y = top + ystep; y-%]</position>
             <value>Schedule Options</value>
             <helptext></helptext>
         </button>
 
         <button name="storeoptions" from="baseverywidebutton">
-            <position>[%-x-%],[%-y = y + ystep; y-%]</position>
+            <position>[%-(xres - bvwbw) div 2 -%],[%-y = y + ystep; y-%]</position>
             <value>Storage Options</value>
             <helptext></helptext>
         </button>
 
         <button name="postprocessing" from="baseverywidebutton">
-            <position>[%-x-%],[%-y = y + ystep; y-%]</position>
+            <position>[%-(xres - bvwbw) div 2 -%],[%-y = y + ystep; y-%]</position>
             <value>Post Processing</value>
             <helptext></helptext>
         </button>
 
         <button name="schedinfo" from="baseverywidebutton">
-            <position>[%-x-%],[%-y = y + ystep; y-%]</position>
+            <position>[%-(xres - bvwbw) div 2 -%],[%-y = y + ystep; y-%]</position>
             <value>Schedule Info</value>
             <helptext></helptext>
         </button>
 
         <button name="preview" from="baseverywidebutton">
-            <position>[%-x-%],[%-y = y + ystep; y-%]</position>
+            <position>[%-(xres - bvwbw) div 2 -%],[%-y = y + ystep; y-%]</position>
             <value>Preview</value>
             <helptext></helptext>
         </button>
 
         <button name="metadata" from="baseverywidebutton">
-            <position>[%-x-%],[%-y = y + ystep; y-%]</position>
+            <position>[%-(xres - bvwbw) div 2 -%],[%-y = y + ystep; y-%]</position>
             <value>Metadata Options</value>
             <helptext></helptext>
         </button>
 
         <button name="cancel" from="basebutton">
-            <position>40,535</position>
+            <position>[%-cancel_x-%],[%-cancel_y-%]</position>
             <value>Cancel</value>
         </button>
 
         <button name="save" from="basebutton">
-            <position>540,535</position>
+            <position>[%-save_x-%],[%-save_y-%]</position>
             <value>Save</value>
         </button>
     </window>
