--- a/templates/base.tt
+++ b/templates/base.tt
@@ -126,8 +126,8 @@
         <area>0,0,10,10</area>
         <type>roundbox</type>
         <fill color="#000000" alpha="120" />
-        <line color="#FFFFFF" alpha="255" width="2" />
-        <cornerradius>12</cornerradius>
+        <!-- <line color="#FFFFFF" alpha="255" width="2" /> -->
+        <cornerradius>4</cornerradius>
     </shape>
 
     <!-- Base definition of a shape used as a background to many widgets -->
