--- a/templates/schedule-ui.tt
+++ b/templates/schedule-ui.tt
@@ -1677,7 +1677,7 @@
 
         <textarea name="title" from="basetextarea">
             <area>[%-margin_left-%],[%-margin_top-%],[%- su_title_w -%],[%-su_title_h-%]</area>
-            <template>%TITLE% %SUBTITLE%</template>                           
+            <template>%TITLE%% - |SUBTITLE%</template>                           
             <font>baselarge</font>
         </textarea>
 
@@ -1686,12 +1686,12 @@
         </textarea>
 
         <textarea name="channel" from="basetextarea">
-            <area>[%-xres - margin_right - su_channel_w -%],170,[%-su_channel_w-%],27</area>
+            <area>[%-xres - margin_right - su_channel_w -%],[%-su_channel_y-%],[%-su_channel_w-%],27</area>
             <align>right</align>
         </textarea>
 
         <textarea name="description" from="basetextarea">
-            <area>[%-margin_left-%],[%-su_description_y-%],[%-xres - margin_left - margin_right -%],100</area>
+            <area>[%-margin_left-%],[%-su_description_y-%],[%-xres - margin_left - margin_right -%],[%-su_description_h-%]</area>
             <multiline>yes</multiline>
             <template>%LONGREPEAT%%(|STARS|) %%DESCRIPTION%</template>
         </textarea>
