--- a/templates/base.tt
+++ b/templates/base.tt
@@ -1092,6 +1092,13 @@
         </fontdef>
     </window>
 
+    <clock name="baseclock">
+        <area>[%-su_clock_x-%],[%-su_clock_y-%],[%-su_clock_w-%],[%-su_clock_h-%]</area>
+        <align>right,top</align>
+        <template>%DATE% %TIME%</template>
+    </clock>
+
+
     <window name="MythMetadataResults">
         <area>193,87,413,426</area>
 
