--- a/templates/schedule-ui.tt
+++ b/templates/schedule-ui.tt
@@ -1648,7 +1648,7 @@
 
     <window name="scheduleeditor">
 
-        <clock name="time" from="baseclock"/>
+           <clock name="time" from="baseclock"/>
 
         <shape name="details_background" from="basebackgroundstrip"/>
 
@@ -1672,7 +1672,6 @@
             <multiline>yes</multiline>
             <template>%LONGREPEAT%%(|STARS|) %%DESCRIPTION%</template>
         </textarea>
-
         <buttonlist name="rules" from="baseverywideselector">
             <position>[%-(xres - bvwsw + 20 ) div 2 -%],[%-top-%]</position>
             <wrapstyle>selection</wrapstyle>
@@ -1728,30 +1727,31 @@
     </window>
 
     <window name="scheduleoptionseditor">
-
-        <clock name="time" from="baseclock"/>
+           <clock name="time" from="baseclock"/>
 
         <shape name="details_background" from="basebackgroundstrip"/>
 
         <textarea name="title" from="basetextarea">
-            <area>50,35,700,45</area>
+            <area>[%-margin_left-%],[%-margin_top-%],[%- su_title_w -%],[%-su_title_h-%]</area>
+            <template>%TITLE%% - |SUBTITLE%</template>                           
             <font>baselarge</font>
         </textarea>
 
         <textarea name="timedate" from="basetextarea">
-            <area>50,170,440,27</area>
+            <area>[%-margin_left-%],170,440,27</area>
         </textarea>
 
         <textarea name="channel" from="basetextarea">
-            <area>550,170,200,35</area>
+            <area>[%-xres - margin_right - su_channel_w -%],[%-su_channel_y-%],[%-su_channel_w-%],27</area>
             <align>right</align>
         </textarea>
 
         <textarea name="description" from="basetextarea">
-            <area>50,70,700,100</area>
+            <area>[%-margin_left-%],[%-su_description_y-%],[%-xres - margin_left - margin_right -%],[%-su_description_h-%]</area>
             <multiline>yes</multiline>
-            <template>%"|SUBTITLE|" %%LONGREPEAT%%(|STARS|) %%DESCRIPTION%</template>
+            <template>%LONGREPEAT%%(|STARS|) %%DESCRIPTION%</template>
         </textarea>
+
 
         <spinbox name="priority" from="basewidespinbox">
             <position>[%-x-%],210</position>
