--- a/templates/schedule-ui.tt
+++ b/templates/schedule-ui.tt
@@ -1646,9 +1646,11 @@
 
     </window>
 
-    <window name="scheduleeditor">
 
-           <clock name="time" from="baseclock"/>
+
+    <window name="scheduleeditor">
+        [% BLOCK scheduledetails %]
+        <clock name="time" from="baseclock"/>
 
         <shape name="details_background" from="basebackgroundstrip"/>
 
@@ -1672,6 +1674,8 @@
             <multiline>yes</multiline>
             <template>%LONGREPEAT%%(|STARS|) %%DESCRIPTION%</template>
         </textarea>
+        [% END #scheduledetails %]
+        [% PROCESS scheduledetails %]
         <buttonlist name="rules" from="baseverywideselector">
             <position>[%-(xres - bvwsw + 20 ) div 2 -%],[%-top-%]</position>
             <wrapstyle>selection</wrapstyle>
@@ -1727,31 +1731,8 @@
     </window>
 
     <window name="scheduleoptionseditor">
-           <clock name="time" from="baseclock"/>
 
-        <shape name="details_background" from="basebackgroundstrip"/>
-
-        <textarea name="title" from="basetextarea">
-            <area>[%-margin_left-%],[%-margin_top-%],[%- su_title_w -%],[%-su_title_h-%]</area>
-            <template>%TITLE%% - |SUBTITLE%</template>                           
-            <font>baselarge</font>
-        </textarea>
-
-        <textarea name="timedate" from="basetextarea">
-            <area>[%-margin_left-%],170,440,27</area>
-        </textarea>
-
-        <textarea name="channel" from="basetextarea">
-            <area>[%-xres - margin_right - su_channel_w -%],[%-su_channel_y-%],[%-su_channel_w-%],27</area>
-            <align>right</align>
-        </textarea>
-
-        <textarea name="description" from="basetextarea">
-            <area>[%-margin_left-%],[%-su_description_y-%],[%-xres - margin_left - margin_right -%],[%-su_description_h-%]</area>
-            <multiline>yes</multiline>
-            <template>%LONGREPEAT%%(|STARS|) %%DESCRIPTION%</template>
-        </textarea>
-
+        [% PROCESS scheduledetails %]
 
         <spinbox name="priority" from="basewidespinbox">
             <position>[%-x-%],210</position>
@@ -1814,30 +1795,7 @@
     </window>
 
     <window name="schedulefiltereditor">
-
-        <shape name="details_background" from="basebackground">
-            <area>25,25,750,175</area>
-        </shape>
-
-        <textarea name="title" from="basetextarea">
-            <area>50,35,700,45</area>
-            <font>baselarge</font>
-        </textarea>
-
-        <textarea name="timedate" from="basetextarea">
-            <area>50,170,440,27</area>
-        </textarea>
-
-        <textarea name="channel" from="basetextarea">
-            <area>550,170,200,35</area>
-            <align>right</align>
-        </textarea>
-
-        <textarea name="description" from="basetextarea">
-            <area>50,70,700,100</area>
-            <multiline>yes</multiline>
-            <template>%"|SUBTITLE|" %%LONGREPEAT%%(|STARS|) %%DESCRIPTION%</template>
-        </textarea>
+        [% PROCESS scheduledetails %]
 
 	<buttonlist name="filters" from="basebuttonlist">
 	    <area>200,210,400,290</area>
