--- a/lib/globals.tt
+++ b/lib/globals.tt
@@ -70,6 +70,8 @@
     # cancel and save button positions
     cancel_x   = xres - bbw - margin_right
     cancel_y   = 535
+    back_x   = xres - bbw - margin_right
+    back_y   = 535
     save_x = cancel_x - bbw - xstep
     save_y = cancel_y
 
